--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -2,9 +2,13 @@
   <div class="ion-text-center ion-padding">
     <img src="assets/img/logo-rangulos.png" style="width: 120px;">
   </div>
-  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+  <form #f="ngForm">
     <ion-card color="white">
       <ion-list>
+          <ion-item color="white">
+              <ion-label position="floating">Nome</ion-label>
+              <ion-input type="text" ngModel name="name" required email #nomeCtrl="ngModel"></ion-input>
+            </ion-item>
         <ion-item color="white">
           <ion-label position="floating">Email</ion-label>
           <ion-input type="email" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
@@ -26,16 +30,46 @@
         </ion-item>
       </ion-list>
       <ion-card-content>
-        <ion-button *ngIf="isLogin" type="submit" color="primary" (click)="onLogin()" expand="block"
-          [disabled]="!f.valid">
-          Entrar
+        <ion-button type="submit" color="primary" (click)="onCreateAccount(f)" expand="block">
+          Criar conta
         </ion-button>
       </ion-card-content>
     </ion-card>
     <div class="ion-padding">
-      <ion-button [routerLink]="['/register']" fill="outline" color="light" expand="block">
-        Criar conta
+      <ion-button [routerLink]="['/auth']" routerLinkActive="router-link-active"  fill="outline" color="light" expand="block">
+        Entrar
       </ion-button>
     </div>
+
+
+    <!-- <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+         
+          <ion-button
+            *ngIf="!isLogin"
+            type="submit"
+            color="primary"
+            (click)="onRegister()"
+            expand="block"
+            [disabled]="!f.valid"
+          >
+            Registrar
+          </ion-button>
+          <ion-button 
+          type="button" 
+          color="primary" 
+          fill="clear" 
+          expand="block"
+          (click)="onSwitchAuthMode()">
+            Trocar para {{ isLogin ? 'Registrar' : 'Entrar' }}
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="4" offset="3">
+        </ion-col>
+      </ion-row>
+    </ion-grid> -->
   </form>
 </ion-content>
