--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -4,17 +4,24 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="primary" *ngIf="loadedEvent && loadedEvent.is_owner">
-        <ion-button [routerLink]="['/edit/' + loadedEvent.id]">
-          <ion-icon name="create" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-buttons>
+      <ion-button [routerLink]="['/edit/' + loadedEvent.id]">
+        <ion-icon name="create" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Evento</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-card *ngIf="loadedEvent">
+  <div class="ion-text-center ion-padding" *ngIf="isLoading">
+    <ion-spinner color="primary"></ion-spinner>
+  </div>
+  <ion-card *ngIf="loadedEvent && !isLoading">
     <form [formGroup]="uploadForm" *ngIf="loadedEvent.is_owner">
-      <img [src]="loadedEvent.url_image ? loadedEvent.url_image : 'assets/img/no-image.png'" (click)="onUpload()">
+      <div class="ion-text-center ion-padding" *ngIf="isLoadingImage">
+        <ion-spinner color="primary"></ion-spinner>
+      </div>
+      <img *ngIf="!isLoadingImage" [src]="loadedEvent.url_image ? loadedEvent.url_image : 'assets/img/no-image.png'"
+        (click)="onUpload()">
       <input type="file" (change)="onFileAdded($event)" #file style="display: none">
     </form>
     <img *ngIf="loadedEvent.url_image && !loadedEvent.is_owner" [src]="loadedEvent.url_image">
@@ -56,9 +63,9 @@
         </ion-item>
         <ion-item>
           <ion-icon name="person" slot="start"></ion-icon>
-          <ion-label class="ion-text-wrap">
+          <ion-label>
             <h2>Anfitrião</h2>
-            <a>{{ loadedEvent.owner }}</a>
+            <p>{{ loadedEvent.owner }}</p>
           </ion-label>
         </ion-item>
       </ion-list>
