--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -39,7 +39,7 @@
             <ion-button routerLink="/tabs/home">Procure um evento</ion-button>
           </div>
         </div>
-        <ion-item *ngFor="let pastEvent of pastEvents" [routerLink]="['./', pastEvent.event_id]">
+        <ion-item *ngFor="let pastEvent of pastEvents" [routerLink]="['/events', pastEvent.id]">
           <ion-label>
             <div class="events-details">
               <ion-icon name="calendar" color="primary"></ion-icon>
