--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -18,7 +18,7 @@
       <ion-thumbnail slot="start">
         <img [src]="profile.urlPhoto" />
       </ion-thumbnail>
-      <ion-label>
+      <ion-label class="ion-text-wrap">
         <h2>{{ profile.name }}</h2>
         <p>{{ profile.email }}</p>
       </ion-label>
