--- a/src/app/modals/event/new-event/new-event.page.html
+++ b/src/app/modals/event/new-event/new-event.page.html
@@ -2,7 +2,9 @@
   <ion-toolbar color="tertiary">
     <ion-title>Novo evento</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="tabs/events"></ion-back-button>
+      <ion-button (click)="onModalDismiss()">
+        <ion-icon name=close></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-buttons slot="primary">
       <ion-button (click)="onCreateEvent()" [disabled]="form.invalid">
