--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -4,7 +4,7 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="primary" *ngIf="loadedEvent && loadedEvent.is_owner">
-      <ion-button [routerLink]="['/edit/' + loadedEvent.id]">
+      <ion-button (click)="editEvent()">
         <ion-icon name="create" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
