--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -45,7 +45,7 @@
     </div>
   </ion-list>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="ion-margin-vertical">
-    <ion-fab-button [routerLink]="['/new']">
+    <ion-fab-button [routerLink]="['/new-event']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
