--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -41,7 +41,7 @@
             <ion-button routerLink="/tabs/home">Procure um evento</ion-button>
           </div>
         </div>
-        <ion-item *ngFor="let pastEvent of pastEvents" [routerLink]="['/events', pastEvent.id]">
+        <ion-item *ngFor="let pastEvent of pastEvents" [routerLink]="['/events/', pastEvent.event_id]">
           <ion-label>
             <div class="events-details">
               <ion-icon name="calendar" color="primary"></ion-icon>
@@ -122,12 +122,12 @@
               <ion-img [src]="getImage(event.id)"></ion-img>
             </ion-thumbnail>
           </ion-item>
-          <ion-item-options>
+          <ion-item-options side="end" *ngIf="event.deleted_at">
             <ion-item-option color="success" (click)="onRestore(event.id, slidingItem)">
               <ion-icon name="undo" slot="icon-only"></ion-icon>
             </ion-item-option>
           </ion-item-options>
-          <ion-item-options side="start">
+          <ion-item-options *ngIf="!event.deleted_at" side="end">
             <ion-item-option color="danger" (click)="onSuspended(event.id, slidingItem)">
               <ion-icon name="close" slot="icon-only"></ion-icon>
             </ion-item-option>
@@ -137,7 +137,7 @@
     </div>
   </div>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="ion-margin-vertical">
-    <ion-fab-button (click)="newEvent()">
+    <ion-fab-button [routerLink]="['/new-event']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
