--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -72,6 +72,20 @@
     </ion-card-content>
   </ion-card>
   <ion-grid *ngIf="loadedEvent" class="ion-padding-horizontal">
+    <ion-card *ngIf="loadedEvent.is_paid">
+      <ion-card-content>
+        <ion-item>
+          <ion-label>Avaliação: {{ loadedEvent.rate ? loadedEvent.rate  : ''  }}</ion-label>
+          <ion-select okText="confirmar" cancelText="cancelar" (ionChange)="onRate($event)">
+            <ion-select-option value="1">1 estrela</ion-select-option>
+            <ion-select-option value="2">2 estrelas</ion-select-option>
+            <ion-select-option value="3">3 estrelas</ion-select-option>
+            <ion-select-option value="4">4 estrelas</ion-select-option>
+            <ion-select-option value="5">5 estrelas</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
     <ion-row>
       <ion-col *ngIf="!isEventEnded() && !loadedEvent.is_owner && loadedEvent.is_guest && !loadedEvent.is_paid">
         <ion-button color="success" (click)="onPayEvent()" expand="block">
@@ -83,7 +97,7 @@
           Excluir evento
         </ion-button>
       </ion-col>
-      <ion-col *ngIf="!loadedEvent.is_guest && !isEventEnded()">
+      <ion-col *ngIf="loadedEvent.is_guest && !isEventEnded() && !loadedEvent.is_owner">
         <ion-button (click)="onDeleteCurrent()" expand="block" color="danger">
           Não ir mais
         </ion-button>
@@ -94,19 +108,6 @@
         </ion-button>
       </ion-col>
     </ion-row>
+
   </ion-grid>
-  <ion-card *ngIf="isEventEnded() && loadedEvent.is_paid">
-    <ion-card-content>
-      <ion-item>
-        <ion-label>Nota: {{ loadedEvent.rate ? loadedEvent.rate : 'Avaliação'  }}</ion-label>
-        <ion-select okText="confirmar" cancelText="cancelar" (ionChange)="onRate($event)">
-          <ion-select-option value="1">1 estrela</ion-select-option>
-          <ion-select-option value="2">2 estrelas</ion-select-option>
-          <ion-select-option value="3">3 estrelas</ion-select-option>
-          <ion-select-option value="4">4 estrelas</ion-select-option>
-          <ion-select-option value="5">5 estrelas</ion-select-option>
-        </ion-select>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
 </ion-content>
