--- a/src/app/events/new-event/new-event.page.html
+++ b/src/app/events/new-event/new-event.page.html
@@ -18,12 +18,9 @@
       <ion-row>
         <ion-col>
           <ion-item>
-              <ion-label position="floating">Titulo do evento</ion-label>
-              <ion-input
-              type="text"
-              formControlName="title"
-              >
-              </ion-input>
+            <ion-label position="floating">Titulo do evento</ion-label>
+            <ion-input type="text" formControlName="title">
+            </ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -34,108 +31,90 @@
           </div>
         </ion-col>
       </ion-row>
-        
+
       <ion-row>
-          <ion-col>
-            <ion-item>
-                <ion-label position="floating">Sobre</ion-label>
-                <ion-textarea
-                formControlName="about"
-                >
-                </ion-textarea>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <div *ngIf="form.get('about').invalid && form.get('about').dirty">
-                <ion-badge color="danger">"Sobre" obrigatório</ion-badge>
-            </div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col>
-              <ion-item>
-                  <ion-label position="floating">Endereço</ion-label>
-                <ion-textarea 
-                formControlName="address"
-                 placeholder="Rua/Avenida, número, bairro - cidade, sigla do estado">
-                  </ion-textarea>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-            <ion-row>
-              <ion-col>
-                <ion-item>
-                    <ion-label position="floating">Preço do convite</ion-label>
-                    <ion-input
-                    type="number"
-                    formControlName="price"
-                    >
-        
-                    </ion-input>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                  <div *ngIf="form.get('price').invalid && form.get('price').dirty">
-                      <ion-badge color="danger">"Preço" obrigatório</ion-badge>
-                  </div>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col>
-                  <ion-item>
-                      <ion-label position="floating">Máximo de convidados</ion-label>
-                      <ion-input
-                      type="number"
-                      formControlName="maxGuests"
-                      >
-                      </ion-input>      
-                  </ion-item>
-                </ion-col>
-              </ion-row>
-            <ion-row>
-              <ion-col>
-                <ion-item>
-                    <ion-label position="floating">Inicío do evento</ion-label>
-                  <ion-datetime
-                  displayFormat="DD MMM, YYYY HH:mmZ"
-                  minuteValues="0, 15, 30, 45"
-                  formControlName="startDate"
-                  >
-                  </ion-datetime>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col>
-                <div *ngIf="form.get('startDate').invalid && form.get('startDate').dirty">
-                    <ion-badge color="danger">"Data" obrigatória</ion-badge>
-                </div>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col>
-                <ion-item>
-                    <ion-label position="floating">Fim do evento</ion-label>
-                  <ion-datetime
-                  displayFormat="DD MMM, YYYY HH:mmZ"
-                  minuteValues="0, 15, 30, 45"
-                  formControlName="endDate"
-                  >
-                  </ion-datetime>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                  <div *ngIf="form.get('endDate').invalid && form.get('endDate').dirty">
-                      <ion-badge color="danger">"Data" obrigatória</ion-badge>
-                  </div>
-                </ion-col>
-              </ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Sobre</ion-label>
+            <ion-textarea formControlName="about">
+            </ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div *ngIf="form.get('about').invalid && form.get('about').dirty">
+            <ion-badge color="danger">"Sobre" obrigatório</ion-badge>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Endereço</ion-label>
+            <ion-textarea formControlName="address" placeholder="Rua/Avenida, número, bairro - cidade, sigla do estado">
+            </ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Preço do convite</ion-label>
+            <ion-input type="number" formControlName="price">
+
+            </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div *ngIf="form.get('price').invalid && form.get('price').dirty">
+            <ion-badge color="danger">"Preço" obrigatório</ion-badge>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Máximo de convidados</ion-label>
+            <ion-input type="number" formControlName="maxGuests">
+            </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Data do início</ion-label>
+            <ion-datetime displayFormat="DD MMM, YYYY HH:mm " minuteValues="0, 15, 30, 45" formControlName="startDate">
+            </ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div *ngIf="form.get('startDate').invalid && form.get('startDate').dirty">
+            <ion-badge color="danger">"Data" obrigatória</ion-badge>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Fim do evento</ion-label>
+            <ion-datetime displayFormat="DD MMM, YYYY HH:mm" minuteValues="0, 15, 30, 45" formControlName="endDate">
+            </ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div *ngIf="form.get('endDate').invalid && form.get('endDate').dirty">
+            <ion-badge color="danger">"Data" obrigatória</ion-badge>
+          </div>
+        </ion-col>
+      </ion-row>
     </ion-grid>
   </form>
 </ion-content>
