--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -11,6 +11,7 @@
     <ion-title>Evento</ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
   <div class="ion-text-center ion-padding" *ngIf="isLoading">
     <ion-spinner color="primary"></ion-spinner>
@@ -39,37 +40,38 @@
       <div class="ion-text-wrap">
         {{ loadedEvent.about }}
       </div>
-      <ion-list>
-        <ion-item>
-          <ion-icon name="alarm" slot="start"></ion-icon>
-          <ion-label>
-            <h2>Horário</h2>
-            <p>{{ startHour }} até {{ endHour }}</p>
-          </ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="people" slot="start"></ion-icon>
-          <ion-label>
-            <h2>Quantidade máxima</h2>
-            <p>{{ loadedEvent.max_guests }} pessoas | confirmados: {{ loadedEvent.total_guests }}</p>
-          </ion-label>
-        </ion-item>
-        <ion-item (click)="openAddress()">
-          <ion-icon name="globe" slot="start"></ion-icon>
-          <ion-label class="ion-text-wrap">
-            <h2>Endereço</h2>
-            <a>{{ loadedEvent.address }}</a>
-          </ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="person" slot="start"></ion-icon>
-          <ion-label>
-            <h2>Anfitrião</h2>
-            <p>{{ loadedEvent.owner }}</p>
-          </ion-label>
-        </ion-item>
-      </ion-list>
     </ion-card-content>
+    <ion-list>
+
+      <ion-item>
+        <ion-icon name="alarm" slot="end"></ion-icon>
+        <ion-label>
+          <p>Horário</p>
+          <h2>{{ startHour }} até {{ endHour }}</h2>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="people" slot="end"></ion-icon>
+        <ion-label>
+          <p>Quantidade máxima</p>
+          <h2>{{ loadedEvent.max_guests }} pessoas | confirmados: {{ loadedEvent.total_guests }}</h2>
+        </ion-label>
+      </ion-item>
+      <ion-item (click)="openAddress()">
+        <ion-icon name="globe" slot="end"></ion-icon>
+        <ion-label class="ion-text-wrap">
+          <p>Endereço</p>
+          <a>{{ loadedEvent.address }}</a>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="person" slot="end"></ion-icon>
+        <ion-label>
+          <p>Anfitrião</p>
+          <h2>{{ loadedEvent.owner }}</h2>
+        </ion-label>
+      </ion-item>
+    </ion-list>
   </ion-card>
   <ion-grid *ngIf="loadedEvent" class="ion-padding-horizontal">
     <ion-card *ngIf="loadedEvent.is_paid">
@@ -102,7 +104,7 @@
           Não ir mais
         </ion-button>
       </ion-col>
-      <ion-col *ngIf="!isEventEnded() && !loadedEvent.is_owner && !loadedEvent.is_guest">
+      <ion-col *ngIf="!isEventEnded() && !loadedEvent.is_owner && !loadedEvent.is_guest && !loadedEvent.is_owner">
         <ion-button (click)="onEnsureInvitation()" expand="block" color="primary" *ngIf="!loadedEvent.is_owner">
           Garantir convite
         </ion-button>
