--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,38 @@
 <ion-app>
-    <ion-router-outlet></ion-router-outlet>
+    <ion-split-pane contentId="content">
+        <ion-menu contentId="content" type="overlay">
+            <ion-header>
+                <ion-toolbar color="primary">
+                    <ion-title>Rangulos</ion-title>
+                </ion-toolbar>
+            </ion-header>
+            <ion-content>
+                <ion-item *ngIf="profile">
+                    <ion-avatar slot="start">
+                        <img [src]="profile.urlPhoto" />
+                    </ion-avatar>
+                    <ion-label class="ion-text-wrap">
+                        <h2>{{ profile.name }}</h2>
+                        <p>{{ profile.email }}</p>
+                    </ion-label>
+                </ion-item>
+                <ion-list>
+                    <ion-menu-toggle *ngFor="let p of appPages" auto-hide="false">
+                        <ion-item [routerDirection]="'root'" [routerLink]="[p.url, { segment: p.menuSegment }]">
+                            <ion-icon [name]="p.icon" slot="start"></ion-icon>
+                            <ion-label>{{ p.title }}</ion-label>
+                        </ion-item>
+                    </ion-menu-toggle>
+                </ion-list>
+            </ion-content>
+            <ion-footer>
+                <ion-toolbar>
+                    <ion-button slot="end" (click)="onLogout()" color="danger">
+                        <ion-icon name="exit"></ion-icon>
+                      </ion-button>
+                </ion-toolbar>
+            </ion-footer>
+        </ion-menu>
+        <ion-router-outlet id="content"></ion-router-outlet>
+    </ion-split-pane>
 </ion-app>
