aleteração de url, remoção de rotas, remover module, removido nav

--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="tertiary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/tabs/events"></ion-back-button>
+      <ion-back-button defaultHref="/events"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="primary" *ngIf="loadedEvent && loadedEvent.is_owner">
       <ion-button (click)="editEvent()">
