console log e log

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,6 +5,7 @@
     </ion-buttons>
     <ion-title>Rangulos</ion-title>
   </ion-toolbar>
+  <ion-searchbar placeholder="Procurar"></ion-searchbar>
 </ion-header>
 
 <ion-content>
@@ -19,7 +20,7 @@
       <ion-text>Não há eventos por perto</ion-text>
     </ion-item>
     <div class="ion-text-center ion-margin">
-      <ion-button routerLink="/tabs/events/new">Que tal criar um?</ion-button>
+      <ion-button routerLink="/events/new">Que tal criar um?</ion-button>
     </div>
   </div>
 
