--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -79,7 +79,7 @@
     </ion-card-header>
     <ion-list>
       <ion-item *ngFor="let guest of loadedEvent.guests">
-        <ion-badge slot="end" color="success" >Pago</ion-badge>
+        <ion-badge slot="end" color="success">Pago</ion-badge>
         <ion-label>
           <h2>{{ guest.name }}</h2>
           <p>{{ guest.email }}</p>
@@ -87,22 +87,21 @@
       </ion-item>
     </ion-list>
   </ion-card>
-  <ion-grid *ngIf="loadedEvent" class="ion-padding-horizontal">
-    <ion-card *ngIf="loadedEvent.is_paid && !loadedEvent.is_owner">
-      <ion-card-content>
-        <ion-item>
-          <ion-label>Avaliação: {{ loadedEvent.rate ? loadedEvent.rate  : ''  }}</ion-label>
-          <ion-select okText="confirmar" cancelText="cancelar" (ionChange)="onRate($event)">
-            <ion-select-option value="1">1 estrela</ion-select-option>
-            <ion-select-option value="2">2 estrelas</ion-select-option>
-            <ion-select-option value="3">3 estrelas</ion-select-option>
-            <ion-select-option value="4">4 estrelas</ion-select-option>
-            <ion-select-option value="5">5 estrelas</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </ion-card-content>
-    </ion-card>
-   
+  <ion-card *ngIf="loadedEvent && loadedEvent.is_paid && !loadedEvent.is_owner">
+    <ion-card-content>
+      <ion-item>
+        <ion-label>Avaliação: {{ loadedEvent.rate ? loadedEvent.rate  : ''  }}</ion-label>
+        <ion-select okText="confirmar" cancelText="cancelar" (ionChange)="onRate($event)">
+          <ion-select-option value="1">1 estrela</ion-select-option>
+          <ion-select-option value="2">2 estrelas</ion-select-option>
+          <ion-select-option value="3">3 estrelas</ion-select-option>
+          <ion-select-option value="4">4 estrelas</ion-select-option>
+          <ion-select-option value="5">5 estrelas</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+  <ion-grid *ngIf="loadedEvent">
     <ion-row>
       <ion-col *ngIf="!isEventEnded() && !loadedEvent.is_owner && loadedEvent.is_guest && !loadedEvent.is_paid">
         <ion-button color="success" (click)="onPayEvent()" expand="block">
