--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,8 +1,8 @@
 <ion-content color="primary">
-  <div class="ion-text-center ion-padding">
-    <img src="assets/img/logo-rangulos.png" style="width: 120px;">
+  <div class="ion-text-center ion-margin-top">
+    <img src="assets/img/logo-rangulos.png" style="width: 130px;">
   </div>
-  <form #f="ngForm">
+  <form #f="ngForm" class="ion-margin-top">
     <ion-card color="white">
       <ion-list>
           <ion-item color="white">
