--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>Rangulos</ion-title>
   </ion-toolbar>
-  <ion-searchbar placeholder="Procurar"></ion-searchbar>
+  <ion-searchbar [(ngModel)]="query" placeholder="Procurar" (ionChange)="filterEvents($event)" debounce="500"></ion-searchbar>
 </ion-header>
 
 <ion-content>
