--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,7 +20,7 @@
       <ion-text>Não há eventos por perto</ion-text>
     </ion-item>
     <div class="ion-text-center ion-margin">
-      <ion-button routerLink="/events/new">Que tal criar um?</ion-button>
+      <ion-button routerLink="/new">Que tal criar um?</ion-button>
     </div>
   </div>
 
@@ -46,7 +46,7 @@
     </div>
   </ion-list>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="ion-margin-vertical">
-    <ion-fab-button [routerLink]="['/new-event']">
+    <ion-fab-button [routerLink]="['/new']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
