--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -139,7 +139,7 @@
     </div>
   </div>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="ion-margin-vertical">
-    <ion-fab-button [routerLink]="['/new-event']">
+    <ion-fab-button [routerLink]="['/new']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
