--- a/src/app/events/new-event/new-event.page.html
+++ b/src/app/events/new-event/new-event.page.html
@@ -115,6 +115,13 @@
           </div>
         </ion-col>
       </ion-row>
+      <ion-row>
+        <ion-col class="ion-text-right">
+          <ion-button (click)="onFillEvents()" fill="clear">
+            <ion-icon name="information-circle-outline" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
     </ion-grid>
   </form>
 </ion-content>
